// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTUItem /> should render when [verified=false] 1`] = `
<Item__StyledOTUItem
  key="foo"
  to="/refs/baz/otus/foo"
>
  <strong>
    Foo
  </strong>
  <Item__OTUItemAbbreviation>
    FB
  </Item__OTUItemAbbreviation>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="tag"
    tip="This OTU is unverified"
  />
</Item__StyledOTUItem>
`;

exports[`<OTUItem /> should render when [verified=true] 1`] = `
<Item__StyledOTUItem
  key="foo"
  to="/refs/baz/otus/foo"
>
  <strong>
    Foo
  </strong>
  <Item__OTUItemAbbreviation>
    FB
  </Item__OTUItemAbbreviation>
</Item__StyledOTUItem>
`;
